--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bonwood Bowl</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -12,9 +11,6 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/static/site.css" />
-
-</head>
-<body>
     <nav class="navbar navbar-dark bg-dark navbar-expand">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">Bonwood Bowl</a>
@@ -31,5 +27,17 @@
           </div>
         </div>
       </nav>
+    <title>{% block title %}{% endblock %}</title>
+</head>
+<body>
+      {% for msg in get_flashed_messages() %}
+      <p class="flash-msg">
+        {{ msg }}
+      </p>
+    {% endfor %}
+
+    {% block body %}{% endblock %}
+
+    {% block after_body %}{% endblock %}
 </body>
 </html>
