--- a/templates/base.html
+++ b/templates/base.html
@@ -18,10 +18,10 @@
             <div class="navbar-nav">
               <a class="nav-link" href="/reservations">Reservations</a>
               <a class="nav-link" href="/cart">Cart</a>
-              {% if 'username' in session %}
+              {% if 'user_email' in session %}
               <a class="nav-link" href="/logout">Log Out</a>
               {% else %}
-              <a class="nav-link" href="/login">Log In</a>
+              <a class="nav-link" href="/">Log In</a>
               {% endif %}
             </div>
           </div>
