--- a/templates/base.html
+++ b/templates/base.html
@@ -11,9 +11,9 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="/static/site.css" />
-    <nav class="navbar navbar-dark bg-dark navbar-expand">
+    <nav class="navbar navbar-light bg-light navbar-expand">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Bonwood Bowl</a>
+          <a class="navbar-brand" href="/">Bonwood Bowl</a>
           <div class="collapse navbar-collapse">
             <div class="navbar-nav">
               <a class="nav-link" href="/reservations">Reservations</a>
@@ -21,7 +21,7 @@
               {% if 'user_email' in session %}
               <a class="nav-link" href="/logout">Log Out</a>
               {% else %}
-              <a class="nav-link" href="/">Log In</a>
+              <a class="nav-link" href="/login">Log In</a>
               {% endif %}
             </div>
           </div>
