--- a/templates/cart.html
+++ b/templates/cart.html
@@ -1,1 +1,7 @@
 {% extends 'base.html' %}
+{% block title %}Bonwood Bowl{% endblock %}
+{% block body %}
+<h1> Checkout </h1>
+<br><br>
+
+{% endblock %}
