--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
 <h2>Log In</h2>
   <form action="/login/login_form" method="POST">
     <p>
-      Email <input type="text" name="email">
+      Email <input type="email" name="email">
     </p>
 
     <p>
