--- a/templates/reservations.html
+++ b/templates/reservations.html
@@ -3,22 +3,22 @@
 
 <h3>Reserve a lane!</h3>
 
-<form id=reservation_form action="/reservations/create_reservation">
+<form id=reservation_form action="/reservations/create_reservation" method="POST">
   <p> Select a time between 10 AM and 10 PM</p>
   <label for="res_time">Date:</label>
-  <input type="datetime-local" name = "res_time" id="res_time" min="2022-11-30T10:00" max="2022-11-30T22:00" required />
-  <span class="validity"></span>
+    <input type="datetime-local" name = "reserve_time" id="rezzy_time" min="2022-11-30T10:00" max="2022-11-30T22:00" value="2022-11-30T10:00" required />
+      <span class="validity"></span>
   <br><br>
   <label for="rental">Need shoe rental?</label>
-  <input name="rental" type="checkbox" id="rental">
+    <input name="rental" type="checkbox" id="rental">
   <br><br>
   <label for="party_size"></label>
-  <select name="party_size" id="party_size">
-    <option value="">How many bowlers?</option>
-    {% for num in range(1, 20) %}
-      <option value="{{ num }}">{{ num }}</option>
-    {% endfor %}
-  </select>
+    <select name="party_size" id="party_size">
+      <option value="">How many bowlers?</option>
+      {% for num in range(1, 20) %}
+        <option value="{{ num }}">{{ num }}</option>
+      {% endfor %}
+    </select>
   <p>* Groups of 20+ will need to call the front desk for availability.</p>
   <br>
   <input type="submit" value="Submit">
