--- a/templates/base.html
+++ b/templates/base.html
@@ -5,23 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous"
       rel="stylesheet"
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/static/site.css" />
-    <nav class="navbar navbar-light bg-light navbar-expand">
+    <link rel="stylesheet" href="/static/styles.css" />
+    <nav id="navbar-bg" class="navbar navbar-light navbar-expand">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">Bonwood Bowl</a>
-          <div class="collapse navbar-collapse">
+          <a id="navbar-options" class="navbar-brand" href="/">Bonwood Bowl</a>
+          <div id="sub-navs" class="collapse navbar-collapse">
             <div class="navbar-nav">
-              <a class="nav-link" href="/reservations">Reservations</a>
-              <a class="nav-link" href="/cart">Cart</a>
+              <a id="navbar-options" class="nav-link" href="/reservations">Reservations</a>
+              <a id="navbar-options" class="nav-link" href="/cart">Cart</a>
               {% if 'user_email' in session %}
-              <a class="nav-link" href="/logout">Log Out</a>
+              <a id="navbar-options" class="nav-link" href="/logout">Log Out</a>
               {% else %}
-              <a class="nav-link" href="/login">Log In</a>
+              <a id="navbar-options" class="nav-link" href="/login">Log In</a>
               {% endif %}
             </div>
           </div>
@@ -30,14 +30,44 @@
     <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-      {% for msg in get_flashed_messages() %}
-      <p class="flash-msg">
-        {{ msg }}
-      </p>
-    {% endfor %}
-
+  {% with errors = get_flashed_messages(category_filter=["error"]), successes = get_flashed_messages(category_filter=["success"]) %}
+  {% if errors %}
+  <div class="alert alert-danger" role="alert">
+    <ul>
+      {%- for msg in errors %}
+      <li>{{ msg }}</li>
+      {% endfor -%}
+    </ul>
+  </div>
+  {%elif successes%}
+  <div class="alert alert-success" role="alert"">
+    <ul>
+      {%- for msg in successes %}
+      <li>{{ msg }}</li>
+      {% endfor -%}
+    </ul>
+  </div>
+  {% endif %}
+  {% endwith %}
     {% block body %}{% endblock %}
-
-    {% block after_body %}{% endblock %}
-</body>
+    {% block after_body %}
+    {% endblock %}
+    <footer id="footer">
+      <div class="container">
+        <div class="row">
+            <div class="col-sm-4">
+              <p>2500 South Main Street
+                South Salt Lake, UT 84115</p>
+            </div>
+            <div class="col-sm-4">
+              <p>Bonwood is conveniently located on Main Street in South Salt Lake. If traveling north on I-15, simply exit at 3300 S and travel east to Main Street. If you are traveling south on I-15, exit 2100 S and travel east to Main Street.</p>
+            </div>
+            <div class="col-sm-4">
+              <p>(801) 487-7758</p>
+            </div>
+        </div>
+      </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  </body>
 </html>
