--- a/templates/login.html
+++ b/templates/login.html
@@ -1,40 +1,49 @@
 {% extends 'base.html' %}
 {% block title %}Bonwood Bowl{% endblock %}
 {% block body %}
-<h2>Please Sign In</h2>
+<h2 class="container">Please Sign In!</h2>
+<br><br>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6">
+        <h2>Log In</h2>
 
-<h2>Log In</h2>
-  <form action="/login/login_form" method="POST">
-    <p>
-      Email <input type="email" name="email">
-    </p>
+        <form action="/login/login_form" method="POST">
+          <div class="mb-3">
+            <label for="email_input" class="form-label">Email address</label>
+            <input type="email" class="form-control" name="email" aria-describedby="emailHelp">
+          </div>
+          <div class="mb-3">
+            <label for="password_input" class="form-label">Password</label>
+            <input type="password" class="form-control" name="password">
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+        <div class="container-fluid" id="login-img">
+          <img src="https://pbxd6d.p3cdn1.secureserver.net/wp-content/uploads/2021/05/cropped-BonwoodLogo512-01.png" alt="">
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6">
+        <h2>Create an Account</h2>
+        <form action="/users" method="POST">
+          <div class="mb-3">
+            <label for="email_input" class="form-label">Email address</label>
+            <input type="email" class="form-control" name="email" aria-describedby="emailHelp">
+            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+          </div>
+          <div class="mb-3">
+            <label for="password_input" class="form-label">Password</label>
+            <input type="password" class="form-control" name="password">
+          <div class="mb-3">
+            <label for="last_name_input" class="form-label">Last Name</label>
+            <input type="text" class="form-control" name="last_name" aria-describedby="emailHelp">
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+      </div>
+    </div>
+  </div>
 
-    <p>
-      Password <input type="password" name="password">
-    </p>
 
-    <p>
-      <input type="submit">
-    </p>
-  </form>
-  
-<h2>Create an Account</h2>
-<form action="/users" method="POST">
-  <p>
-    Email <input type="text" name="email">
-  </p>
-
-  <p>
-    Password <input type="password" name="password">
-  </p>
-
-  <p>
-    Last Name <input type="text" name="last_name">
-  </p>
-
-  <p>
-    <input type="submit">
-  </p>
-</form>
 
 {% endblock %}
