--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -17,7 +17,7 @@
         </div>
     </div>
     <br>
-    <h2 id=homepage-h2 class="container mx-auto">Feel free to make a reservation by selecting it in the navigation bar!</h2>
+    <h2 id=homepage-h2 class="container mx-auto">Please log in to make a reservation by selecting it in the navigation bar!</h2>
     <br>
     <div class="container">
         <div class="row">
